--- a/99_Practice/src/main/webapp/WEB-INF/web.xml
+++ b/99_Practice/src/main/webapp/WEB-INF/web.xml
@@ -1,13 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
   <display-name>99_Practice</display-name>
+  
+  
+  <!-- XML 방식으로URL 매핑 -->
+  
+  <servlet>
+  		<servlet-name>orderResult</servlet-name>
+  		<servlet-class>controller.PizzaOrder</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+  		<servlet-name>orderResult</servlet-name>
+  		<url-pattern>orderResult</url-pattern>
+  </servlet-mapping>
+  
+  
   <welcome-file-list>
-  	<welcome-file>order.jsp</welcome-file>
     <welcome-file>index.html</welcome-file>
+  	<welcome-file>order.jsp</welcome-file>
     <welcome-file>index.jsp</welcome-file>
     <welcome-file>index.htm</welcome-file>
     <welcome-file>default.html</welcome-file>
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
+  
+  <error-page>
+  		<error-code>404</error-code>
+  		<location>/views/error/404.jsp</location>
+  </error-page>
+  
+  
+  
 </web-app>
